--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 actix-web = "4"
 serde = {version = "1.0.145", features = ["derive"]}
 serde_json = "1.0.85"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
